[package]
name = "TwoNeurons"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = { version = "0.16.1", features = ["serde", "rayon"] }
ndarray-rand = "0.15.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[[bin]]
name = "TwoNeurons"
path = "src/TwoNeurons.rs"
